--- a/Followers.ipynb
+++ b/Followers.ipynb
@@ -33,14 +33,22 @@
     "api.getMediaLikers(media_id)\n",
     "users = api.LastJson['users']\n",
     "\n",
-    "# Loop through the list of users and extract their username and follower count\n",
-    "for user in users:\n",
-    "    username = user['username']\n",
-    "    user_id = user['pk']\n",
-    "    api.getUsernameInfo(user_id)\n",
-    "    user_info = api.LastJson['user']\n",
-    "    follower_count = user_info['follower_count']\n",
-    "    print(username, follower_count)\n",
+    "# Open a text file for writing\n",
+    "with open('likes.txt', 'w') as f:\n",
+    "\n",
+    "    # Loop through the list of users and extract their username and follower count\n",
+    "    for user in users:\n",
+    "        username = user['username']\n",
+    "        user_id = user['pk']\n",
+    "        api.getUsernameInfo(user_id)\n",
+    "        user_info = api.LastJson['user']\n",
+    "        follower_count = user_info['follower_count']\n",
+    "        result = f\"{username}, {follower_count}\\n\"\n",
+    "        f.write(result)\n",
+    "        print(result)\n",
+    "\n",
+    "# Close the text file\n",
+    "f.close()\n",
     "\n",
     "# Logout from your Instagram account\n",
     "api.logout()\n"
